# loansasa

./: .env  Cargo.toml  README.md
assets/css/: auth.css  dashboard.css
assets/js/: auth.js
contracts/: LoanSasaToken.postman_collection.json  README.md
contracts/loan_sasa_token/: README.md  Scarb.toml  sample_events.sh  snfoundry.toml
contracts/loan_sasa_token/src/: interfaces.cairo  lib.cairo
contracts/loan_sasa_token/tests/: test_contract.cairo
migrations/2024-08-11-091315_create_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: auth.rs  dashboard.rs  mod.rs  tests.rs  w3.code-workspace
src/db_operations/: connections.rs  db.rs  mod.rs  session.rs  users.rs
src/models/: app_state.rs  mod.rs  ui.rs  users.rs
src/utils/: client_info.rs  session.rs
templates/: dashboard.html  login.html  reg.html  register.html
templates/auth/: login.html  register.html
templates/dashboard/: base.html  home.html  lenders.html  loans.html  profile.html
web/: .env  .gitignore  Cargo.toml  README.md  diesel.toml  rustc-ice-2024-08-15T11_33_52-38813.txt
web/assets/: a.html
web/migrations/2024-09-06-141006_create_user_details/: down.sql  up.sql
web/migrations/2024-09-23-163828_create_wallets/: down.sql  up.sql
web/migrations/2024-09-23-170003_create_wallets/: down.sql  up.sql
web/src/: main.rs  schema.rs
web/src/controllers/: dashboard.rs  mod.rs  tests.rs
web/src/controllers/tests/: mod.rs  stark.rs  tests1.rs
web/src/db_operations/: mod.rs  session.rs  user_details.rs  users.rs  wallets.rs
web/src/models/: app_state.rs  events.rs  mod.rs  session.rs  ui.rs  user_details.rs  wallets.rs
web/templates/dashboard/: base.html  profile.html
